--- a/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/grupoPermisos.xhtml
+++ b/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/grupoPermisos.xhtml
@@ -50,117 +50,117 @@
                                 <h:outputText value="Permisos"></h:outputText>
                             </f:facet>
                             <p:outputLabel value="Administra:" for="administra" />
-                            <p:selectOneRadio id="administra" value="#{grupoPermisoBean.grupoSeleccionado.permisos.administra}">
+                            <p:selectOneRadio id="administra" value="#{grupoPermisoBean.grupoSeleccionado.permiso.administra}">
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Registra Contratos:" for="registraContratos" />
-                            <p:selectOneRadio id="registraContratos" value="#{grupoPermisoBean.grupoSeleccionado.permisos.registraContratos}">
+                            <p:selectOneRadio id="registraContratos" value="#{grupoPermisoBean.grupoSeleccionado.permiso.registraContratos}">
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Consulta Contratos:" for="consultaContratos" />
-                            <p:selectOneRadio id="consultaContratos" value="#{grupoPermisoBean.grupoSeleccionado.permisos.consultaContratos}">
+                            <p:selectOneRadio id="consultaContratos" value="#{grupoPermisoBean.grupoSeleccionado.permiso.consultaContratos}">
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Genera Reportes De Contratos:" for="generaReportesDeContratos" />
-                            <p:selectOneRadio id="generaReportesDeContratos" value="#{grupoPermisoBean.grupoSeleccionado.permisos.generaReportesDeContratos}" >
+                            <p:selectOneRadio id="generaReportesDeContratos" value="#{grupoPermisoBean.grupoSeleccionado.permiso.generaReportesDeContratos}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Crea Ticket De Soporte:" for="creaTicketDeSoporte" />
-                            <p:selectOneRadio id="creaTicketDeSoporte" value="#{grupoPermisoBean.grupoSeleccionado.permisos.creaTicketDeSoporte}" >
+                            <p:selectOneRadio id="creaTicketDeSoporte" value="#{grupoPermisoBean.grupoSeleccionado.permiso.creaTicketDeSoporte}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Bloquea/Desbloquea Cliente:" for="bloqueaDesbloqueaDeCliente" />
-                            <p:selectOneRadio id="bloqueaDesbloqueaDeCliente" value="#{grupoPermisoBean.grupoSeleccionado.permisos.bloqueaDesbloqueaDeCliente}" >
+                            <p:selectOneRadio id="bloqueaDesbloqueaDeCliente" value="#{grupoPermisoBean.grupoSeleccionado.permiso.bloqueaDesbloqueaDeCliente}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Asigna Tickets:" for="asignaTickets" />
-                            <p:selectOneRadio id="asignaTickets" value="#{grupoPermisoBean.grupoSeleccionado.permisos.asignaTickets}" >
+                            <p:selectOneRadio id="asignaTickets" value="#{grupoPermisoBean.grupoSeleccionado.permiso.asignaTickets}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Administra Tickets Propietarios:" for="administraTicketsPropietarios" />
-                            <p:selectOneRadio id="administraTicketsPropietarios" value="#{grupoPermisoBean.grupoSeleccionado.permisos.administraTicketsPropietarios}" >
+                            <p:selectOneRadio id="administraTicketsPropietarios" value="#{grupoPermisoBean.grupoSeleccionado.permiso.administraTicketsPropietarios}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Consulta Todos Los Tickets:" for="consultaTodosLosTickets" />
-                            <p:selectOneRadio id="consultaTodosLosTickets" value="#{grupoPermisoBean.grupoSeleccionado.permisos.consultaTodosLosTickets}" >
+                            <p:selectOneRadio id="consultaTodosLosTickets" value="#{grupoPermisoBean.grupoSeleccionado.permiso.consultaTodosLosTickets}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Consulta tickets propietarios:" for="consultaTicketsPropietarios" />
-                            <p:selectOneRadio id="consultaTicketsPropietarios" value="#{grupoPermisoBean.grupoSeleccionado.permisos.consultaTicketsPropietarios}" >
+                            <p:selectOneRadio id="consultaTicketsPropietarios" value="#{grupoPermisoBean.grupoSeleccionado.permiso.consultaTicketsPropietarios}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Genera Reportes De Tickets De Soporte:" for="generaReportesDeTicketsDeSoporte" />
-                            <p:selectOneRadio id="generaReportesDeTicketsDeSoporte" value="#{grupoPermisoBean.grupoSeleccionado.permisos.generaReportesDeTicketsDeSoporte}" >
+                            <p:selectOneRadio id="generaReportesDeTicketsDeSoporte" value="#{grupoPermisoBean.grupoSeleccionado.permiso.generaReportesDeTicketsDeSoporte}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Ingresa Inventario Al Sistema:" for="ingresaInventarioAlSistema" />
-                            <p:selectOneRadio id="ingresaInventarioAlSistema" value="#{grupoPermisoBean.grupoSeleccionado.permisos.ingresaInventarioAlSistema}" >
+                            <p:selectOneRadio id="ingresaInventarioAlSistema" value="#{grupoPermisoBean.grupoSeleccionado.permiso.ingresaInventarioAlSistema}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Administra Registro De Movimiento De Inventario:" for="administraRegistroDeMovimientoDeInventario" />
-                            <p:selectOneRadio id="administraRegistroDeMovimientoDeInventario" value="#{grupoPermisoBean.grupoSeleccionado.permisos.administraRegistroDeMovimientoDeInventario}" >
+                            <p:selectOneRadio id="administraRegistroDeMovimientoDeInventario" value="#{grupoPermisoBean.grupoSeleccionado.permiso.administraRegistroDeMovimientoDeInventario}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Busca Inventario:" for="buscaInventario" />
-                            <p:selectOneRadio id="buscaInventario" value="#{grupoPermisoBean.grupoSeleccionado.permisos.buscaInventario}" >
+                            <p:selectOneRadio id="buscaInventario" value="#{grupoPermisoBean.grupoSeleccionado.permiso.buscaInventario}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Genera Acta De Entrega/Recepcion:" for="generaActaDeEntregaRecepcion" />
-                            <p:selectOneRadio id="generaActaDeEntregaRecepcion" value="#{grupoPermisoBean.grupoSeleccionado.permisos.generaActaDeEntregaRecepcion}" >
+                            <p:selectOneRadio id="generaActaDeEntregaRecepcion" value="#{grupoPermisoBean.grupoSeleccionado.permiso.generaActaDeEntregaRecepcion}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Genera Reportes De Inventarios:" for="generaReportesDeInventarios" />
-                            <p:selectOneRadio id="generaReportesDeInventarios" value="#{grupoPermisoBean.grupoSeleccionado.permisos.generaReportesDeInventarios}" >
+                            <p:selectOneRadio id="generaReportesDeInventarios" value="#{grupoPermisoBean.grupoSeleccionado.permiso.generaReportesDeInventarios}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Administra Productos:" for="administraProductos" />
-                            <p:selectOneRadio id="administraProductos" value="#{grupoPermisoBean.grupoSeleccionado.permisos.administraProductos}" >
+                            <p:selectOneRadio id="administraProductos" value="#{grupoPermisoBean.grupoSeleccionado.permiso.administraProductos}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Administra Perfiles De Usuario:" for="administraPerfilesDeUsuario" />
-                            <p:selectOneRadio id="administraPerfilesDeUsuario" value="#{grupoPermisoBean.grupoSeleccionado.permisos.administraPerfilesDeUsuario}" >
+                            <p:selectOneRadio id="administraPerfilesDeUsuario" value="#{grupoPermisoBean.grupoSeleccionado.permiso.administraPerfilesDeUsuario}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Administra Marcas Fabricantes:" for="administraMarcasFabricantes" />
-                            <p:selectOneRadio id="administraMarcasFabricantes" value="#{grupoPermisoBean.grupoSeleccionado.permisos.administraMarcasFabricantes}" >
+                            <p:selectOneRadio id="administraMarcasFabricantes" value="#{grupoPermisoBean.grupoSeleccionado.permiso.administraMarcasFabricantes}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Administra Categorias De Producto Por Fabricante:" for="administraCategoriasDeProductoPorFabricante" />
-                            <p:selectOneRadio id="administraCategoriasDeProductoPorFabricante" value="#{grupoPermisoBean.grupoSeleccionado.permisos.administraCategoriasDeProductoPorFabricante}" >
+                            <p:selectOneRadio id="administraCategoriasDeProductoPorFabricante" value="#{grupoPermisoBean.grupoSeleccionado.permiso.administraCategoriasDeProductoPorFabricante}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Administra Categorias De Producto:" for="administraCategoriasDeProducto" />
-                            <p:selectOneRadio id="administraCategoriasDeProducto" value="#{grupoPermisoBean.grupoSeleccionado.permisos.administraCategoriasDeProducto}" >
+                            <p:selectOneRadio id="administraCategoriasDeProducto" value="#{grupoPermisoBean.grupoSeleccionado.permiso.administraCategoriasDeProducto}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Administra Modelos/Revisiones:" for="administraModelosRevisiones" />
-                            <p:selectOneRadio id="administraModelosRevisiones" value="#{grupoPermisoBean.grupoSeleccionado.permisos.administraModelosRevisiones}" >
+                            <p:selectOneRadio id="administraModelosRevisiones" value="#{grupoPermisoBean.grupoSeleccionado.permiso.administraModelosRevisiones}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
                             <p:outputLabel value="Administra Clientes:" for="administraClientes" />
-                            <p:selectOneRadio id="administraClientes" value="#{grupoPermisoBean.grupoSeleccionado.permisos.administraClientes}" >
+                            <p:selectOneRadio id="administraClientes" value="#{grupoPermisoBean.grupoSeleccionado.permiso.administraClientes}" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                             </p:selectOneRadio>
