--- a/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/inventarios/buscarStockDeInventario.xhtml
+++ b/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/inventarios/buscarStockDeInventario.xhtml
@@ -19,7 +19,7 @@
                             <h:outputText value="Búsqueda de Stock Local"></h:outputText>
                         </f:facet>
                         <div style="overflow: auto">
-                            <p:dataTable id="inventario" widgetVar="inventario" rows="10" paginator="true" value="#{buscarStockDeInventario.itemProductos}" filteredValue="#{buscarStockDeInventario.itemProductosFiltrados}" scrollWidth="100%" scrollable="true" var="item" >
+                            <p:dataTable id="inventario" widgetVar="inventario" rows="10" paginator="true" value="#{buscarStockDeInventario.itemProductos}" filteredValue="#{buscarStockDeInventario.itemProductosFiltrados}" scrollWidth="100%" scrollable="true" lazy="true" var="item" >
                                 <f:facet name="header">
                                     <p:outputPanel>
                                         <h:outputText value="Buscar en todos los campos:" />
@@ -99,8 +99,8 @@
                                         <p:outputLabel for="detalles" value="Detalles: "></p:outputLabel>
                                         <ui:repeat id="detalles" value="#{item.atributoItemProductoList}" var="atributo">
                                             <p:panelGrid columns="2">
-                                                <p:outputLabel for="param" value="#{atributo.parametrosDeProducto.nombre}: "></p:outputLabel>
-                                                <h:outputText id="param" value="#{atributo.valor} #{atributo.parametrosDeProducto.unidadMedidaid.nombre}"></h:outputText>
+                                                <p:outputLabel for="param" value="#{atributo.parametroDeProducto.nombre}: "></p:outputLabel>
+                                                <h:outputText id="param" value="#{atributo.valor} #{atributo.parametroDeProducto.unidadMedidaid.nombre}"></h:outputText>
                                             </p:panelGrid>
                                         </ui:repeat>
                                         <p:outputLabel for="modelo" value="Modelo: "></p:outputLabel>
